--- a/index.html
+++ b/index.html
@@ -23,32 +23,34 @@
   <body>
     <header>
       <div class="container header">
-        <a href="index.html" lang="en" class="logo">Web<span class="logo-studio">Studio</span></a>
-        <nav class="navigation">
-          <ul class="list-header list">
-            <li class="navigation-item">
-              <a href="index.html" class="navigation-link page link">Студия</a>
+        <a href="index.html" lang="en" class="header__logo logo--blue"
+          >Web<span class="header__logo-studio">Studio</span></a
+        >
+        <nav class="header__navigation">
+          <ul class="header__list list">
+            <li class="header__item">
+              <a href="index.html" class="header__link page--after link--style">Студия</a>
             </li>
-            <li class="navigation-item">
-              <a href="./portfolio.html" class="navigation-link link">Портфолио</a>
+            <li class="header__item">
+              <a href="./portfolio.html" class="header__link link--style">Портфолио</a>
             </li>
-            <li class="navigation-item">
-              <a href="Контакты" class="navigation-link link">Контакты</a>
+            <li class="header__item">
+              <a href="Контакты" class="header__link link--style">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="list-contacts list">
-          <li class="navigation-item">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="header-icon" width="16" height="12">
+        <ul class="header__contacts list">
+          <li class="header__item">
+            <a href="mailto:info@devstudio.com" class="header__phone link--style">
+              <svg class="header__icon" width="16" height="12">
                 <use href="./img/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="navigation-item">
-            <a href="tel:+380961111111" class="link">
-              <svg class="header-icon" width="10" height="16">
+          <li class="header__item">
+            <a href="tel:+380961111111" class="header__email link--style">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -58,10 +60,12 @@
       </div>
     </header>
     <main>
-      <section class="section-hero">
-        <div class="container hero-container">
-          <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-          <button type="button" class="btn active-btn" data-modal-open>Заказать услугу</button>
+      <section class="hero">
+        <div class="container hero__container">
+          <h1 class="hero__title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <button type="button" class="hero__btn btn--style" data-modal-open>
+            Заказать услугу
+          </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button type="button" class="modal__btn-close" data-modal-close>
@@ -175,10 +179,10 @@
       </section>
       <section class="about section">
         <div class="container">
-          <h2 class="our-team__title">Чем мы занимаемся</h2>
-          <ul class="our-work-list list">
-            <li class="our-work-item">
-              <p class="our-work-text">Десктопные приложения</p>
+          <h2 class="about__title">Чем мы занимаемся</h2>
+          <ul class="about__list list">
+            <li class="about__item">
+              <p class="about__text">Десктопные приложения</p>
               <img
                 src="./img/skils/box-1.jpg"
                 alt="Оптимизация страници под Пк"
@@ -186,8 +190,8 @@
                 height="294"
               />
             </li>
-            <li class="our-work-item">
-              <p class="our-work-text">Мобильные приложения</p>
+            <li class="about__item">
+              <p class="about__text">Мобильные приложения</p>
               <img
                 src="./img/skils/box-2.jpg"
                 alt="Оптимизация страници под телефон"
@@ -195,8 +199,8 @@
                 height="294"
               />
             </li>
-            <li class="our-work-item">
-              <p class="our-work-text">Дизайнерские решения</p>
+            <li class="about__item">
+              <p class="about__text">Дизайнерские решения</p>
               <img
                 src="./img/skils/box-3.jpg"
                 alt="Оптимизация страници под планшет"
@@ -208,8 +212,8 @@
         </div>
       </section>
       <section class="section-team section">
-        <div class="container our-team">
-          <h2 class="our-team__title">Наша команда</h2>
+        <div class="container">
+          <h2 class="about__title">Наша команда</h2>
           <ul class="our-team__list">
             <li class="our-team__item">
               <img src="./img/teams/ihor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
@@ -459,84 +463,84 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="clients section">
         <div class="container">
-          <h2 class="our-team__title">Постоянные клиенты</h2>
-          <ul class="clients-list list">
-            <li class="clients-item">
+          <h2 class="about__title">Постоянные клиенты</h2>
+          <ul class="clients__list list">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients__item">
               <a
-                class="client-name"
+                class="client__name"
                 href=""
                 target="_blank"
                 aria-label="client name"
                 rel="noopener noreferrent"
               >
-                <svg class="clients" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./img/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
@@ -546,82 +550,82 @@
       </section>
     </main>
     <footer class="footer">
-      <section class="section-footer container">
-        <div class="footer-contacts">
-          <a href="index.html" lang="en" class="logo logo-footer"
-            >Web<span class="footer-logo">Studio</span></a
+      <section class="footer__section container">
+        <div class="footer__contacts">
+          <a href="index.html" lang="en" class="logo--blue"
+            >Web<span class="footer__logo-white">Studio</span></a
           >
           <address>
-            <ul class="footer-address list">
-              <li class="footer-items">
+            <ul class="footer__list list">
+              <li class="footer__link">
                 <a
                   href="https://goo.gl/maps/iHPk22q8Q6fAZVJF9"
                   target="_blank"
                   rel="noopener nofollow"
-                  class="list-1"
+                  class="footer__item"
                   >г. Киев, пр-т Леси Украинки, 26
                 </a>
               </li>
-              <li class="footer-items">
-                <a href="mailto:info@devstudio.com" class="list-2">info@devstudio.com</a>
+              <li class="footer__link">
+                <a href="mailto:info@devstudio.com" class="footer__item-two">info@devstudio.com</a>
               </li>
-              <li class="footer-items">
-                <a href="tel:+380961111111" class="list-2">+38 096 111 11 11</a>
+              <li class="footer__link">
+                <a href="tel:+380961111111" class="footer__item-two">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
-          <p class="text-footer">ПРИСОЕДИНЯЙТЕСЬ</p>
-          <ul class="social list">
-            <li class="social-items">
+        <div class="footer__social">
+          <p class="footer__text">ПРИСОЕДИНЯЙТЕСЬ</p>
+          <ul class="footer__social-list list">
+            <li class="footer__social-link">
               <a
-                class="social-link"
+                class="footer__social-logo"
                 href=""
                 target="_blank"
                 aria-label="instagram"
                 rel="noopener noreferrent"
               >
-                <svg class="social-icon" width="20" height="20">
+                <svg class="footer__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-items">
+            <li class="footer__social-link">
               <a
-                class="social-link"
+                class="footer__social-logo"
                 href=""
                 target="_blank"
                 aria-label="twitter"
                 rel="noopener noreferrent"
               >
-                <svg class="social-icon" width="20" height="20">
+                <svg class="footer__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-items">
+            <li class="footer__social-link">
               <a
-                class="social-link"
+                class="footer__social-logo"
                 href=""
                 target="_blank"
                 aria-label="facebook"
                 rel="noopener noreferrent"
               >
-                <svg class="social-icon" width="20" height="20">
+                <svg class="footer__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-items">
+            <li class="footer__social-link">
               <a
-                class="social-link"
+                class="footer__social-logo"
                 href=""
                 target="_blank"
                 aria-label="linkedin"
                 rel="noopener noreferrent"
               >
-                <svg class="social-icon" width="20" height="20">
+                <svg class="footer__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -629,12 +633,12 @@
           </ul>
         </div>
         <div>
-          <p class="text-footer">Подпишитесь на рассылку</p>
-          <form class="footer-form" name="footer-form">
-            <input class="input-footer" type="text" name="e-mail" placeholder="E-mail" />
-            <button class="footer-btn" type="submit">
+          <p class="footer__text">Подпишитесь на рассылку</p>
+          <form class="footer__form" name="footer-form">
+            <input class="footer__input" type="text" name="e-mail" placeholder="E-mail" />
+            <button class="footer__btn" type="submit">
               Подписаться
-              <svg class="icon-send" width="24" height="24">
+              <svg class="footer__icon-send" width="24" height="24">
                 <use href="./img/icons.svg#icon-send"></use>
               </svg>
             </button>
