--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container header">
         <a href="index.html" lang="en" class="header__logo logo--blue"
           >Web<span class="header__logo-studio">Studio</span></a
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="hero">
         <div class="container hero__container">
@@ -126,8 +126,8 @@
           </div>
         </div>
       </section>
-      <section class="section">
-        <div class="container benefits">
+      <section class="section container">
+        <div class="benefits">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="benefits__list list">
             <li class="benefits__item">
@@ -177,7 +177,8 @@
           </ul>
         </div>
       </section>
-      <section class="about section">
+
+      <!--  <section class="about section">
         <div class="container">
           <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list">
@@ -210,8 +211,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section-team section">
+      </section> -->
+      <!-- <section class="section-team section">
         <div class="container">
           <h2 class="about__title">Наша команда</h2>
           <ul class="our-team__list">
@@ -462,7 +463,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="clients section">
         <div class="container">
           <h2 class="about__title">Постоянные клиенты</h2>
@@ -549,7 +550,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <section class="footer__section container">
         <div class="footer__contacts">
           <a href="index.html" lang="en" class="logo--blue"
@@ -645,7 +646,7 @@
           </form>
         </div>
       </section>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
