--- a/index.html
+++ b/index.html
@@ -21,26 +21,25 @@
     <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header>
-      <div class="container header">
-        <a href="index.html" lang="en" class="header__logo logo--blue"
-          >Web<span class="header__logo-studio">Studio</span></a
-        >
-        <nav class="header__navigation">
-          <ul class="header__list list">
-            <li class="header__item">
-              <a href="index.html" class="header__link page--after link--style">Студия</a>
-            </li>
-            <li class="header__item">
-              <a href="./portfolio.html" class="header__link link--style">Портфолио</a>
-            </li>
-            <li class="header__item">
-              <a href="Контакты" class="header__link link--style">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="header__contacts list">
+    <header class="container header">
+      <a href="index.html" lang="en" class="header__logo logo--blue"
+        >Web<span class="header__logo-studio">Studio</span></a
+      >
+      <nav class="header__navigation">
+        <ul class="header__list list">
           <li class="header__item">
+            <a href="index.html" class="header__link page--after link--style">Студия</a>
+          </li>
+          <li class="header__item">
+            <a href="./portfolio.html" class="header__link link--style">Портфолио</a>
+          </li>
+          <li class="header__item">
+            <a href="Контакты" class="header__link link--style">Контакты</a>
+          </li>
+        </ul>
+
+        <ul class="header__contacts list">
+          <li class="header__contact">
             <a href="mailto:info@devstudio.com" class="header__phone link--style">
               <svg class="header__icon" width="16" height="12">
                 <use href="./img/icons.svg#icon-envelope"></use>
@@ -49,7 +48,7 @@
             >
           </li>
           <li class="header__item">
-            <a href="tel:+380961111111" class="header__email link--style">
+            <a href="tel:+380961111111" class="header__phone link--style">
               <svg class="header__icon" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
@@ -57,8 +56,13 @@
             >
           </li>
         </ul>
-      </div>
-    </header> -->
+      </nav>
+      <a class="header__menu-link" href="">
+        <svg class="header__menu" width="24" height="16">
+          <use href="./img/icons.svg#_menu_24px"></use>
+        </svg>
+      </a>
+    </header>
     <main>
       <section class="hero">
         <div class="container hero__container">
@@ -126,7 +130,7 @@
           </div>
         </div>
       </section>
-      <section class="section container">
+      <section class="section__benefits container">
         <div class="benefits">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="benefits__list list">
@@ -178,7 +182,7 @@
         </div>
       </section>
 
-      <!--  <section class="about section">
+      <section class="about">
         <div class="container">
           <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list">
@@ -211,17 +215,17 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section-team section">
+      </section>
+      <section class="section-team section">
         <div class="container">
           <h2 class="about__title">Наша команда</h2>
-          <ul class="our-team__list">
+          <ul class="our-team__list list">
             <li class="our-team__item">
               <img src="./img/teams/ihor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
               <div class="our-team__wraper">
                 <h3 class="our-team__name">Игорь Демьяненко</h3>
                 <p lang="en" class="our-team__position">Product Designer</p>
-                <ul class="our-team__list list">
+                <ul class="our-team__social-list list">
                   <li class="our-team__link">
                     <a
                       class="our-team__social"
@@ -282,7 +286,7 @@
               <div class="our-team__wraper">
                 <h3 class="our-team__name">Ольга Репина</h3>
                 <p lang="en" class="our-team__position">Frontend Developer</p>
-                <ul class="our-team__list list">
+                <ul class="our-team__social-list list">
                   <li class="our-team__link">
                     <a
                       class="our-team__social"
@@ -344,7 +348,7 @@
                 <h3 class="our-team__name">Николай Тарасов</h3>
                 <p lang="en" class="our-team__position">Marketing</p>
 
-                <ul class="our-team__list list">
+                <ul class="our-team__social-list list">
                   <li class="our-team__link list">
                     <a
                       class="our-team__social"
@@ -405,7 +409,7 @@
               <div class="our-team__wraper">
                 <h3 class="our-team__name">Михаил Ермаков</h3>
                 <p lang="en" class="our-team__position">UI Designer</p>
-                <ul class="our-team__list list">
+                <ul class="our-team__social-list list">
                   <li class="our-team__link">
                     <a
                       class="our-team__social"
@@ -463,8 +467,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <section class="clients section">
+      </section>
+      <section class="clients">
         <div class="container">
           <h2 class="about__title">Постоянные клиенты</h2>
           <ul class="clients__list list">
@@ -550,88 +554,92 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
-      <section class="footer__section container">
-        <div class="footer__contacts">
-          <a href="index.html" lang="en" class="logo--blue"
-            >Web<span class="footer__logo-white">Studio</span></a
-          >
-          <address>
-            <ul class="footer__list list">
-              <li class="footer__link">
+    <footer class="footer">
+      <section class="footer__section section container">
+        <div class="footer__adress-social">
+          <div class="footer__contacts">
+            <a href="index.html" lang="en" class="logo--blue"
+              >Web<span class="footer__logo-white">Studio</span></a
+            >
+            <address class="footer__adress">
+              <ul class="footer__list list">
+                <li class="footer__link">
+                  <a
+                    href="https://goo.gl/maps/iHPk22q8Q6fAZVJF9"
+                    target="_blank"
+                    rel="noopener nofollow"
+                    class="footer__item"
+                    >г. Киев, пр-т Леси Украинки, 26
+                  </a>
+                </li>
+                <li class="footer__link">
+                  <a href="mailto:info@devstudio.com" class="footer__item-two"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer__link">
+                  <a href="tel:+380961111111" class="footer__item-two">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__social">
+            <p class="footer__text">ПРИСОЕДИНЯЙТЕСЬ</p>
+            <ul class="footer__social-list list">
+              <li class="footer__social-link">
                 <a
-                  href="https://goo.gl/maps/iHPk22q8Q6fAZVJF9"
+                  class="footer__social-logo"
+                  href=""
                   target="_blank"
-                  rel="noopener nofollow"
-                  class="footer__item"
-                  >г. Киев, пр-т Леси Украинки, 26
+                  aria-label="instagram"
+                  rel="noopener noreferrent"
+                >
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./img/icons.svg#icon-instagram"></use>
+                  </svg>
                 </a>
               </li>
-              <li class="footer__link">
-                <a href="mailto:info@devstudio.com" class="footer__item-two">info@devstudio.com</a>
+              <li class="footer__social-link">
+                <a
+                  class="footer__social-logo"
+                  href=""
+                  target="_blank"
+                  aria-label="twitter"
+                  rel="noopener noreferrent"
+                >
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./img/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer__link">
-                <a href="tel:+380961111111" class="footer__item-two">+38 096 111 11 11</a>
+              <li class="footer__social-link">
+                <a
+                  class="footer__social-logo"
+                  href=""
+                  target="_blank"
+                  aria-label="facebook"
+                  rel="noopener noreferrent"
+                >
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./img/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-link">
+                <a
+                  class="footer__social-logo"
+                  href=""
+                  target="_blank"
+                  aria-label="linkedin"
+                  rel="noopener noreferrent"
+                >
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./img/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__social">
-          <p class="footer__text">ПРИСОЕДИНЯЙТЕСЬ</p>
-          <ul class="footer__social-list list">
-            <li class="footer__social-link">
-              <a
-                class="footer__social-logo"
-                href=""
-                target="_blank"
-                aria-label="instagram"
-                rel="noopener noreferrent"
-              >
-                <svg class="footer__icon" width="20" height="20">
-                  <use href="./img/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer__social-link">
-              <a
-                class="footer__social-logo"
-                href=""
-                target="_blank"
-                aria-label="twitter"
-                rel="noopener noreferrent"
-              >
-                <svg class="footer__icon" width="20" height="20">
-                  <use href="./img/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer__social-link">
-              <a
-                class="footer__social-logo"
-                href=""
-                target="_blank"
-                aria-label="facebook"
-                rel="noopener noreferrent"
-              >
-                <svg class="footer__icon" width="20" height="20">
-                  <use href="./img/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer__social-link">
-              <a
-                class="footer__social-logo"
-                href=""
-                target="_blank"
-                aria-label="linkedin"
-                rel="noopener noreferrent"
-              >
-                <svg class="footer__icon" width="20" height="20">
-                  <use href="./img/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div>
           <p class="footer__text">Подпишитесь на рассылку</p>
@@ -646,7 +654,7 @@
           </form>
         </div>
       </section>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
   </body>
 </html>
