--- a/portfolio.html
+++ b/portfolio.html
@@ -22,26 +22,25 @@
     <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header__portfolio">
-      <div class="container header">
-        <a href="index.html" lang="en" class="header__logo logo--blue"
-          >Web<span class="header__logo-studio">Studio</span></a
-        >
-        <nav class="header__navigation">
-          <ul class="header__list list">
-            <li class="header__item">
-              <a href="index.html" class="header__link link--style">Студия</a>
-            </li>
-            <li class="header__item">
-              <a href="./portfolio.html" class="header__link page--after link--style">Портфолио</a>
-            </li>
-            <li class="header__item">
-              <a href="Контакты" class="header__link link--style">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="header__contacts list">
+   <header class="container header header__portfolio">
+      <a href="index.html" lang="en" class="header__logo logo--blue"
+        >Web<span class="header__logo-studio">Studio</span></a
+      >
+      <nav class="header__navigation">
+        <ul class="header__list list">
           <li class="header__item">
+            <a href="index.html" class="header__link  link--style">Студия</a>
+          </li>
+          <li class="header__item">
+            <a href="./portfolio.html" class="header__link page--after link--style">Портфолио</a>
+          </li>
+          <li class="header__item">
+            <a href="Контакты" class="header__link link--style">Контакты</a>
+          </li>
+        </ul>
+
+        <ul class="header__contacts list">
+          <li class="header__contact">
             <a href="mailto:info@devstudio.com" class="header__phone link--style">
               <svg class="header__icon" width="16" height="12">
                 <use href="./img/icons.svg#icon-envelope"></use>
@@ -50,7 +49,7 @@
             >
           </li>
           <li class="header__item">
-            <a href="tel:+380961111111" class="header__email link--style">
+            <a href="tel:+380961111111" class="header__phone link--style">
               <svg class="header__icon" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
@@ -58,11 +57,16 @@
             >
           </li>
         </ul>
-      </div>
+      </nav>
+      <a class="header__menu-link" href="">
+        <svg class="header__menu" width="24" height="16">
+          <use href="./img/icons.svg#_menu_24px"></use>
+        </svg>
+      </a>
     </header>
     <main>
-      <section class="section">
-        <div class="container catalog">
+      <section class="section container">
+        <div class="catalog">
           <h1 class="visually-hidden">Каталог</h1>
           <ul class="catalog__list list">
             <li class="catalog__link">
@@ -268,13 +272,14 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <section class="footer__section container">
-        <div class="footer__contacts">
+     <footer class="footer">
+      <section class="footer__section section container">
+        <div class="footer__adress-social">
+          <div class="footer__contacts">
           <a href="index.html" lang="en" class="logo--blue"
             >Web<span class="footer__logo-white">Studio</span></a
           >
-          <address>
+          <address class="footer__adress">
             <ul class="footer__list list">
               <li class="footer__link">
                 <a
@@ -349,8 +354,9 @@
                 </svg>
               </a>
             </li>
-          </ul>
+            </ul>
         </div>
+       </div>
         <div>
           <p class="footer__text">Подпишитесь на рассылку</p>
           <form class="footer__form" name="footer-form">
