--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
-   <header class="container header header__portfolio">
+   <header class="container header">
       <a href="index.html" lang="en" class="header__logo logo--blue"
         >Web<span class="header__logo-studio">Studio</span></a
       >
@@ -57,16 +57,85 @@
             >
           </li>
         </ul>
-      </nav>
-      <a class="header__menu-link" href="">
-        <svg class="header__menu" width="24" height="16">
-          <use href="./img/icons.svg#_menu_24px"></use>
+      </nav> <button
+        type="button"
+        class="header__menu-link is-open"
+        aria-controls="menu-open"
+        aria-expanded="false"
+        data-menu-button
+      >
+        <svg class="header__menu" width="24" height="16" aria-label="Мобильное меню">
+          <use class="icon_close" href="./img/icons.svg#icon-close"></use>
+          <use class="icon_menu" href="./img/icons.svg#_menu_24px"></use>
         </svg>
-      </a>
+      </button>
+      <div class="header__menu-mobile" id="menu-open" data-menu>
+        <ul class="mobile_list-navigation list">
+          <li class="mobile_link-navigation">
+            <a class="mobile_item-navigation" href="./index.html">Студия</a>
+          </li>
+          <li class="mobile_link-navigation">
+            <a class="mobile_item-navigation mobile_page" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="mobile_link-navigation">
+            <a class="mobile_item-navigation" href="">Контакты</a>
+          </li>
+        </ul>
+        <ul class="mobile_list-contact list">
+          <li class="mobile_link-contact">
+            <a class="mobile_item-tel" href="tel:+380361111111">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile_link-contact">
+            <a class="mobile_item-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
+        <ul class="mobile_list-social list">
+          <li class="mobile_link-social">
+            <a
+              class="mobile__social"
+              href=""
+              target="_blank"
+              aria-label="instagram"
+              rel="noopener noreferrent"
+              >Instagram</a
+            >
+          </li>
+          <li class="mobile_link-social">
+            <a
+              class="mobile__social"
+              href=""
+              target="_blank"
+              aria-label="Twitter"
+              rel="noopener noreferrent"
+              >Twitter</a
+            >
+          </li>
+          <li class="mobile_link-social">
+            <a
+              class="mobile__social"
+              href=""
+              target="_blank"
+              aria-label="Facebook"
+              rel="noopener noreferrent"
+              >Facebook</a
+            >
+          </li>
+          <li class="mobile_link-social">
+            <a
+              class="mobile__social"
+              href=""
+              target="_blank"
+              aria-label="LinkedIn"
+              rel="noopener noreferrent"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section class="section container">
-        <div class="catalog">
+      <section class="section header__portfolio">
+        <div class="catalog container">
           <h1 class="visually-hidden">Каталог</h1>
           <ul class="catalog__list list">
             <li class="catalog__link">
@@ -371,6 +440,7 @@
         </div>
       </section>
     </footer>
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
