--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,7 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/nootebook.jpg" alt="ноутбук" width="370" height="294" />
+                  <img src="./img/cards/nootebook-2_d.jpg" alt="ноутбук" width="370" height="294" />
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -176,7 +176,7 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/bsket.jpg" alt="баскетбол" width="370" height="294" />
+                  <img src="./img/cards/bsket_d.jpg" alt="баскетбол" width="370" height="294" />
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -195,7 +195,7 @@
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
                   <img
-                    src="./img/cards/seafood.jpg"
+                    src="./img/cards/seafood_d.jpg"
                     alt="логоти ресторана"
                     width="370"
                     height="294"
@@ -218,7 +218,7 @@
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
                   <img
-                    src="./img/cards/headphones.jpg"
+                    src="./img/cards/headphones_d.jpg"
                     alt="черные наушники"
                     width="370"
                     height="294"
@@ -241,7 +241,7 @@
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
                   <img
-                    src="./img/cards/two-boxes.jpg"
+                    src="./img/cards/two-boxes_d.jpg"
                     alt="две картонные коробки"
                     width="370"
                     height="294"
@@ -263,7 +263,7 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/monitor.jpg" alt="монитор" width="370" height="294" />
+                  <img src="./img/cards/monitor_d.jpg" alt="монитор" width="370" height="294" />
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -281,7 +281,7 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/book.jpg" alt="книга" width="370" height="294" />
+                  <img src="./img/cards/book_d.jpg" alt="книга" width="370" height="294" />
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -299,7 +299,7 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/label.jpg" alt="бирка" width="370" height="294" />
+                  <img src="./img/cards/label_d.jpg" alt="бирка" width="370" height="294" />
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -318,7 +318,7 @@
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
                   <img
-                    src="./img/cards/nootebook-2.jpg"
+                    src="./img/cards/nootebook-2_d.jpg"
                     alt="серый ноутбук"
                     width="370"
                     height="294"
