--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </div>
         </div>
       </section>
-      <section class="section__benefits container">
+      <section class="section container">
         <div class="benefits">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="benefits__list list">
@@ -538,7 +538,7 @@
           </ul>
         </div>
       </section>
-      <section class="clients">
+      <section class="clients section">
         <div class="container">
           <h2 class="about__title">Постоянные клиенты</h2>
           <ul class="clients__list list">
