--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,24 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/nootebook-2_d.jpg" alt="ноутбук" width="370" height="294" />
+                  <picture>
+                   <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/nootebook_d.jpg 1x, ./img/cards/nootebook_d_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/noote_t_img.jpg 1x, ./img/cards/noote_t_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/noote_m_img.jpg 1x, ./img/cards/noote_m_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                  <img src="./img/cards/noote_m_img.jpg" alt="ноутбук" width="450" height="404" />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -176,7 +193,24 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/bsket_d.jpg" alt="баскетбол" width="370" height="294" />
+                  <picture>
+                  <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/bsket_d.jpg 1x, ./img/cards/bsket_d_img@2x-1.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/basket_t_img-1.jpg 1x, ./img/cards/basket_t_img@2x-1.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/basket_m_img-1.jpg 1x, ./img/cards/basket_m_img@2x-1.jpg 2x"
+                  type="image/jpg"
+                />
+                  <img src="./img/cards/bsket_d.jpg" alt="баскетбол" width="450" height="404" />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -194,12 +228,29 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
+                  <picture>
+                  <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/nootebook_d.jpg 1x, ./img/cards/nootebook_d_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/seafood_t_img-2.jpg 1x, ./img/cards/noote_t_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/seafood_m_img-2.jpg 1x, ./img/cards/seafood_m_img@2x-2.jpg 2x"
+                  type="image/jpg"
+                />
                   <img
-                    src="./img/cards/seafood_d.jpg"
+                    src="./img/cards/seafood_m_img-2.jpg"
                     alt="логоти ресторана"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -217,12 +268,29 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
+                  <picture>
+                  <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/headphones_d.jpg 1x, ./img/cards/headphones_d_img@2x-3.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/headphone_t_img-3.jpg 1x, ./img/cards/headphone_t_img@2x-3.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/headphone_m_img-3.jpg 1x, ./img/cards/headphone_m_img@2x-3.jpg 2x"
+                  type="image/jpg"
+                />
                   <img
-                    src="./img/cards/headphones_d.jpg"
+                    src="./img/cards/headphone_m_img-3.jpg"
                     alt="черные наушники"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -240,12 +308,29 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
+                  <picture>
+                  <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/two-boxes_d.jpg 1x, ./img/cards/two-boxes_d_img@2x-4.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/two-boxes_t_img-4.jpg 1x, ./img/cards/two-boxes_t_img@2x-4.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/two-boxes_m_img-4.jpg 1x, ./img/cards/two-boxes_m_img@2x-4.jpg 2x"
+                  type="image/jpg"
+                />
                   <img
-                    src="./img/cards/two-boxes_d.jpg"
+                    src="./img/cards/two-boxes_m_img-4.jpg"
                     alt="две картонные коробки"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
+                 </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -263,7 +348,24 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/monitor_d.jpg" alt="монитор" width="370" height="294" />
+                  <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/monitor_d.jpg 1x, ./img/cards/monitor_d_img@2x-5.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/monitor_t.jpg 1x, ./img/cards/monitor_t_img@2x-5.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/monitor_m_img-5.jpg 1x, ./img/cards/monitor_m_img@2x-5.jpg 2x"
+                  type="image/jpg"
+                />
+                  <img src="./img/cards/monitor_m_img-5.jpg" alt="монитор" width="450" height="404" />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -281,7 +383,24 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/book_d.jpg" alt="книга" width="370" height="294" />
+                <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/book_d.jpg 1x, ./img/cards/book_d_img@2x-6.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/book_t_img-6.jpg 1x, ./img/cards/book_t_img@2x-6.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/book_t_img-6.jpg 1x, ./img/cards/book_m_img@2x-6.jpg 2x"
+                  type="image/jpg"
+                />
+                  <img src="./img/cards/book_t_img-6.jpg" alt="монитор" width="450" height="404" />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -299,7 +418,24 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
-                  <img src="./img/cards/label_d.jpg" alt="бирка" width="370" height="294" />
+                  <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/label_d.jpg 1x, ./img/cards/label_d_img@2x-7.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/label_t_img-7.jpg 1x, ./img/cards/label_t_img@2x-7.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/label_m_img-7.jpg 1x, ./img/cards/label_m_img@2x-7.jpg 2x"
+                  type="image/jpg"
+                />
+                  <img src="./img/cards/label_m_img-7.jpg" alt="бирка" width="450" height="404" />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -317,12 +453,29 @@
             <li class="catalog__img-link">
               <a href="" class="catalog__icon">
                 <div class="catalog__card-one">
+                  <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/cards/nootebook_d.jpg 1x, ./img/cards/nootebook_d_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/cards/noote_t_img.jpg 1x, ./img/cards/noote_t_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/cards/nootebook_m_img-8.jpg 1x, ./img/cards/nootebook_m_img@2x-8.jpg 2x"
+                  type="image/jpg"
+                />
                   <img
-                    src="./img/cards/nootebook-2_d.jpg"
+                    src="./img/cards/nootebook_m_img-8.jpg"
                     alt="серый ноутбук"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
+                </picture>
                   <div class="catalog__card-two">
                     <p class="catalog__description">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
