--- a/portfolio.html
+++ b/portfolio.html
@@ -231,12 +231,12 @@
                   <picture>
                   <source
                   media="(min-width: 1200px)"
-                  srcset="./img/cards/nootebook_d.jpg 1x, ./img/cards/nootebook_d_img@2x.jpg 2x"
+                  srcset="./img/cards/seafood_d.jpg 1x, ./img/cards/seafood_d_img@2x-2.jpg 2x"
                   type="image/jpg"
                 />
                 <source
                   media="(min-width: 768px)"
-                  srcset="./img/cards/seafood_t_img-2.jpg 1x, ./img/cards/noote_t_img@2x.jpg 2x"
+                  srcset="./img/cards/seafood_t_img-2.jpg 1x, ./img/cards/seafood_t_img@2x-2.jpg 2x"
                   type="image/jpg"
                 />
                 <source
@@ -456,12 +456,12 @@
                   <picture>
                 <source
                   media="(min-width: 1200px)"
-                  srcset="./img/cards/nootebook_d.jpg 1x, ./img/cards/nootebook_d_img@2x.jpg 2x"
+                  srcset="./img/cards/nootebook-2_d.jpg 1x, ./img/cards/nootebook-@2x.jpg 2x"
                   type="image/jpg"
                 />
                 <source
                   media="(min-width: 768px)"
-                  srcset="./img/cards/noote_t_img.jpg 1x, ./img/cards/noote_t_img@2x.jpg 2x"
+                  srcset="./img/cards/nootebook_t_img-8.jpg 1x, ./img/cards/nootebook_t_img@2x.jpg 2x"
                   type="image/jpg"
                 />
                 <source
