--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <label class="modal-form__label form-text--decoration">
                   <span class="modal-form__span">Имя</span>
                   <div class="modal-form__field">
-                    <input class="modal-form__input" type="text" name="name" />
+                    <input class="modal-form__input" type="text" name="name" required/>
                     <svg class="modal-form__icon modal-svg--decoration" width="12" height="12">
                       <use href="./img/icons.svg#icon-name"></use>
                     </svg>
@@ -161,7 +161,7 @@
                 <label class="modal-form__label form-text--decoration">
                   <span class="modal-form__span">Телефон</span>
                   <div class="modal-form__field">
-                    <input class="modal-form__input" type="text" name="phone" />
+                    <input class="modal-form__input" type="text" name="phone" required/>
                     <svg class="modal-form__icon modal-svg--decoration" width="13" height="13">
                       <use href="./img/icons.svg#icon-phone"></use>
                     </svg>
@@ -170,7 +170,7 @@
                 <label class="modal-form__label form-text--decoration">
                   <span class="modal-form__span">Почта</span>
                   <div class="modal-form__field">
-                    <input class="modal-form__input" type="email" name="email" />
+                    <input class="modal-form__input" type="email" name="email" required/>
                     <svg class="modal-form__icon modal-svg--decoration" width="15" height="13">
                       <use href="./img/icons.svg#icon-email"></use>
                     </svg>
